--- a/Entrega III/06.Acciones.tex
+++ b/Entrega III/06.Acciones.tex
@@ -8,7 +8,7 @@
 		
 			\item{Para todo $x\in X$ y para todo par $g,h\in G$, se debe cumplir que $(g*h)\cdot x=g\cdot (h\cdot x)$. La primera operación ($*$) es la interna del grupo $G$, y la segunda operación ($\cdot$) es la acción.}
 		\end{enumerate}
-		Como ya se ha visto, las funciones $\{S,\ T,\ V,\ C\}$ forman el grupo diédrico ${D}_{n}\times{D}_{n}$, con $n$ la longitud de la serie. Se podrá definir entonces la acción $\phi$ de este grupo sobre el conjunto de permutaciones de orden $n$, tal que $\phi(\Psi,\ \sigma)=\Psi\circ\sigma=\Psi(\sigma)=\tau$, con $\Psi\in{D}_{n}\times{D}_{n}$ y $\sigma,\tau\in{S}_n$.
+		Como ya se ha visto, las funciones $\{S,\ T,\ V,\ C\}$ forman el grupo diédrico ${D}_{n}\times{D}_{n}$, siendo $n$ la longitud de la serie. Se podrá definir entonces la acción $\phi$ de este grupo sobre el conjunto de permutaciones de orden $n$, tal que $\phi(\Psi,\ \sigma)=\Psi\circ\sigma=\Psi(\sigma)=\tau$, con $\Psi\in{D}_{n}\times{D}_{n}$ y $\sigma,\tau\in{S}_n$.
 		
 		De igual manera, se puede definir el grupo que forman solamente $I$ y $R$, que servirá más adelante. Como son dos reflexiones, forman el conocido grupo de Klein \textemdash a partir de ahora denotado por $\Xi$, con elementos $Id$, $I$, $R$ e $IR$.
 
@@ -17,16 +17,16 @@
 		\[Orb(x_0)=\{x\in X :\ \exists \ g_0\in {G},\ g_0\cdot x_0 =x\}\]
 	
 		Por ejemplo, dada una permutación $\sigma$, todas las permutaciones a las que se llega desde $\sigma$ mediante algún $\Psi\in{D}_{n}\times{D}_{n}$
-		conforman la órbita de $\sigma$. Por definición, las series a las que se puede llegar desde una serie original conforman su espectro serial, por lo que \textbf{la órbita es en realidad el espectro serial}.
+		conforman la órbita de $\sigma$. Por definición, las series a las que se puede llegar desde una serie original constituyen su espectro serial, por lo que \textbf{la órbita es en realidad el espectro serial}.
 	
 		Para el mismo $x_0$ se define su \emph{estabilizador} como el conjunto de elementos $g\in G$ que fijan $x_0$, es decir, que mandan $x_0$ a sí mismo. Mientras que una órbita es un subconjunto de $X$, un estabilizador es un subgrupo de $G$. Trivialmente, $e\in Stab(x)\ \forall x\in X$, porque el elemento identidad fija cualquier otro elemento por definición.\\
 		\[Stab(x_0)=\{g\in {G}\ :\ g\cdot x_0 =x_0 \}\]
 	
-		Si cada $g\in G$ llevara a $x_0$ a un $x$ distinto, el número de elementos de $Orb(x_0)$ sería igual al número de elementos de $G$. Sin embargo, si un elemento $g_0\in G$ fija $x_0$, entonces no dará nuevos elementos en la órbita de $x$. Por tanto, intuitivamente el tamaño de la órbita disminuye. De hecho,  el teorema de Órbita--Estabilizador dice que el tamaño de una órbita ($|Orb(x_0)|$) será el tamaño de $G$ $(|G|)$ entre el número de elementos que fijan $x_0$; es decir, el tamaño de su estabilizador ($|Stab(x_0)|$). Además, es cierto para todo $x\in X$.\\
+		Si cada $g\in G$ llevara a $x_0$ a un $x$ distinto, el número de elementos de $Orb(x_0)$ sería igual al número de elementos de $G$. Sin embargo, si un elemento $g_0\in G$ fija $x_0$, entonces no dará nuevos elementos en la órbita de $x$. Por tanto, intuitivamente el tamaño de la órbita disminuye. De hecho,  el teorema de órbita--estabilizador dice que el tamaño de una órbita ($|Orb(x_0)|$) será el tamaño de $G$ $(|G|)$ entre el número de elementos que fijan $x_0$; es decir, el tamaño de su estabilizador ($|Stab(x_0)|$). Además, es cierto para todo $x\in X$.\\
 		\[|Orb(x)|=\frac{|{G}|}{|Stab(x)|}\mbox{, o lo que es lo mismo, }|{G}|=|Orb(x)||Stab(x)|\]
 		
 		\def\arraystretch{1.5}
-		Para ver una explicación más detallada y una prueba rigurosa del teorema, ver \cite{orb-est}.
+		Para ver una explicación más detallada y una prueba rigurosa del teorema, consúltese~\cite{orb-est}.
 		Este teorema implica que los tamaños de cada órbita y cada estabilizador son divisores del tamaño del grupo. Por ejemplo, como el tamaño del grupo $\Xi$ es 4, cualquier estabilizador y cualquier órbita tendrán tamaño 1, 2 o 4. En concreto, como $Id$ está siempre en el estabilizador, para  todo $\sigma$ será de una de estas formas:
 		
 		\[\begin{array}{*{5}c}
@@ -42,7 +42,7 @@
 		\label{burnside}
 		Las órbitas, que son subconjuntos de $X$, forman una \emph{partición} de $X$. Esto significa que son subconjuntos disjuntos: ningún $x$ puede estar en dos órbitas distintas. Interesa entonces saber cuántos subconjuntos hay; es decir, el número de órbitas ($\#Orb$). El lema de Burnside afirma que se pueden calcular así:
 		\[\#Orb=\frac{1}{|{G}|}\sum_{x\in{X}}|{Stab}(x)|\]	
-		Se prueba de esta forma: por el teorema de Órbita--Estabilizador, $|{Stab}(x)|=\frac{|{G}|}{|Orb(x)|}$, por lo que la parte derecha se puede expresar así:
+		Se prueba de esta forma: por el teorema de órbita--estabilizador, $|{Stab}(x)|=\frac{|{G}|}{|Orb(x)|}$, por lo que la parte derecha se puede expresar así:
 		\[\frac{1}{|{G}|}\sum_{x\in X}|{Stab}(x)|=
 		\frac{1}{|{G}|}\sum_{x\in X}\frac{|{G}|}{|Orb(x)|}=
 		\sum_{x\in X}\frac{1}{|Orb(x)|}\]
@@ -52,4 +52,4 @@
 	
 		Este lema permite calcular el número de posibles espectros seriales distintos, ya que el espectro de una serie es igual al espectro de sus series transformadas. Un compositor serialista debe entonces escoger no una serie original, sino el espectro con el que construir la obra. O, más bien, si escoge una serie original está escogiendo el mismo material que si escogiera otra serie de ese mismo espectro.
 		
-		Para más aplicaciones de acciones en el ámbito de la teoría musical, ver \cite{actions}.
+		Para más aplicaciones de acciones en el ámbito de la teoría musical, véase~\cite{actions}.
