--- a/Entrega III/07.Espectros.tex
+++ b/Entrega III/07.Espectros.tex
@@ -3,23 +3,26 @@
 		\label{s:itr}
 		Es interesante conocer el número de espectros seriales distintos que un compositor puede escoger. Al fin y al cabo, es irrelevante qué serie se escoge como la original dentro de su espectro serial, ya que produce el mismo material compositivo que cualquiera de su mismo espectro.
 		
-		Para calcular el número de espectros seriales se redefinirán las funciones transformativas para una longitud serial arbitraria, $n$, que será mayor que 2. Para $n=0,\ 1$ y 2 se realizará el cálculo en el apartado \ref{s:trivcase}.
-	
-		Además, como las transposiciones siempre son distintas entre sí, siempre pertenecen al mismo espectro. Se tomarán a partir de ahora todas ellas como equivalentes, de manera que solo se necesita hacer el cálculo para $\{I,\ R\}$.
+		Para calcular el número de espectros seriales se redefinirán las funciones transformativas para una longitud serial arbitraria, $n$, que será mayor que 2. Para $n=0,\ 1$ y 2 se realizará el cálculo en el apartado \ref{s:trivcase}. Además, como las transposiciones siempre son distintas entre sí, siempre pertenecen al mismo espectro. Se tomarán a partir de ahora todas ellas como equivalentes, de manera que solo se necesita hacer el cálculo para  el conjunto de funciones $\{I,\ R\}$.
 		
-		Al calcular con permutaciones se trabajará módulo $n$. La retrogradación sigue siendo $R(\sigma(m))=\sigma(-1-m)$. La inversión será $I(\sigma(m))=-\sigma(m)$, omitiendo la transposición habitual, ya que se toman las series transpuestas como equivalentes. De esta forma $-\sigma(m)+2\sigma(0)\equiv-\sigma(m)$. La retrogradación invertida es, por tanto, la composición de ambas: $RI(\sigma(m))={I}\circ{R}(\sigma(m))={I}\left({R}(\sigma(m))\right)=-\sigma(-1-m)$.			
+		Al calcular con permutaciones se trabajará siempre módulo $n$. La retrogradación sigue siendo $R(\sigma(m))=\sigma(-1-m)$. La inversión será $I(\sigma(m))=-\sigma(m)$, omitiendo la transposición habitual, ya que se toman las series transpuestas como equivalentes. De esta forma $-\sigma(m)+2\sigma(0)\equiv-\sigma(m)$. La retrogradación invertida es, por tanto, la composición de ambas: $RI(\sigma(m))={I}\circ{R}(\sigma(m))={I}\left({R}(\sigma(m))\right)=-\sigma(-1-m)$.			
 		
 		La retrogradación, la inversión y la composición de ambas cumplen que al aplicarlas dos veces se vuelve a la serie original. En teoría de grupos se dice que tienen \textit{orden 2}. Entonces $\{Id,\ I,\ R,\ IR\}$ forma el ya mencionado grupo de Klein ($\Xi$), donde $RI$ $\equiv$ $IR$, ya que estamos tomando las series transpuestas como equivalentes. 
 		
-		En general, un grupo de Klein es el formado por cuatro elementos donde cada elemento es inverso de sí mismo. El grupo de Klein, llamado así en honor al matemático alemán Felix Klein, es el grupo $\mathbb{Z}/(2)\times\mathbb{Z}/(2)$, producto directo de dos grupos cíclicos de orden 2.
+		En general, un grupo de Klein es el formado por cuatro elementos donde cada elemento es inverso de sí mismo. El grupo de Klein, llamado así en honor al matemático alemán Felix Klein, es el grupo  $\mathbb{Z}/(2)\times \mathbb{Z}/(2)$, producto directo de dos grupos cíclicos de orden 2.
+
+
 		
 		Por el lema de Burnside:
-		\[\#\mbox{Espectros}=\frac{1}{|\mathbb{Z}/(2)\times\mathbb{Z}/(2)|}\sum_{\sigma\in{S}_n}|{Stab}(\sigma)|=\frac{1}{4}\sum_{\sigma\in{S}_n}|{Stab}(\sigma)|\]
+		$$\#\mbox{Espectros}=\frac{1}{|\mathbb{Z}/(2)\times\mathbb{Z}/(2)|}\sum_{\sigma\in{S}_n}|{Stab}(\sigma)|=\frac{1}{4}\sum_{\sigma\in{S}_n}|{Stab}(\sigma)|$$
+	
+	
+
 		
 		Es decir, se deben calcular para cada posible serie $\sigma\in{S}_n$ cuántas funciones transformativas lo dejan igual o equivalente bajo transposición.
 		
 		Como los estabilizadores son subgrupos, por el teorema de Lagrange su tamaño debe ser divisor del tamaño del grupo total. Entonces se pueden agrupar los estabilizadores por sus tamaños: 1, 2 o 4, y así calcular $\sum|{Stab}(\sigma)|$ agrupando todas las permutaciones con igual tamaño de estabilizador. Si $\#\sigma_i$ es el número de permutaciones cuyos estabilizadores tienen tamaño $i$:		
-		\[\sum_{\sigma\in{S}_n}|{Stab}(\sigma)|=1\cdot(\#\sigma_1)+2\cdot(\#\sigma_2)+4\cdot(\#\sigma_4)\]
+$$\sum_{\sigma\in{S}_n}|{Stab}(\sigma)|=1\cdot(\#\sigma_1)+2\cdot(\#\sigma_2)+4\cdot(\#\sigma_4)$$
 	
 		Primero, se ha de ver que una permutación nunca va a ser igual ni equivalente mediante transposiciones a su inversa.
 
@@ -29,9 +32,13 @@
 %		n&\equiv2\sigma(m)\Longleftrightarrow\\
 %		\frac{n}{2}&\equiv\sigma(m)
 %		\end{align*}
+
 \begin{center}
-		\includegraphics{Serialismo-matematicas-diagrama-2}
+		\includegraphics{Serialismo-matematicas-diagrama-2.png}
 \end{center}
+
+
+
 		
 		Así, $\sigma(m)$ sería constante para todo $m\in \mathbb{Z} / (n)$, lo cual es imposible. Esto implica que ninguna permutación va a tener a $I$ en su estabilizador, por lo que $\#\sigma_4=0$. Queda entonces calcular cuántas permutaciones son equivalentes a su retrogradación y cuántas a su retrogradación inversa. La suma de ambas dará $\#\sigma_2$.
 	
@@ -63,14 +70,14 @@
 		\[\sigma(m)={RI}(\sigma(m))+\gamma=-\sigma(-1-m)+\gamma\]
 		\[\gamma=\sigma(m)+\sigma(-1-m)\]
 		
-		Sus elementos simétricos suman una cantidad constante: son series con simetría impar. Tal y como se ha hecho en el apartado anterior, se puede fijar una de las notas, ya que las transportaciones son equivalentes. Si $n$ es impar, la nota central es $\sigma(\frac{n-1}{2})$, que es igual a $\sigma(-1-\frac{n-1}{2})$. Por tanto, $\gamma=2\cdot\sigma(\frac{n-1}{2})$. Si se escoge esta nota para ser fijada a 0, entonces $\gamma=2\cdot0=0$. Es decir, $\gamma$ puede ser fijada a 0 sin pérdida de generalidad.
+		Sus elementos simétricos suman una cantidad constante: son series con simetría impar. Tal y como se ha hecho en el apartado anterior, se puede fijar una de las notas, ya que las transportaciones son equivalentes. Si $n$ es impar, la nota central es $\sigma(\frac{n-1}{2})$, que es igual a $\sigma(-1-\frac{n-1}{2})$. Por tanto, $\gamma=2\cdot\sigma(\frac{n-1}{2})$. Si se escoge esta nota para ser fijada a 0, entonces $\gamma=2\cdot0=0$. Es decir, $\gamma$ puede ser fijada en 0 sin pérdida de generalidad.
 		
 		Para el resto de notas, $\sigma(m)=-\sigma(-1-m)$. Ya escogida la nota central, permite $n-1$ posibilidades para $\sigma(0)$. Ya escogidas la nota central, la primera y su simétrica, permiten $n-3$ posibilidades para $\sigma(1)$, y así sucesivamente hasta llegar a la nota anterior a la central, que es $\frac{n-3}{2}$. Por ello, para $n$ impar, el número de series con simetría impar es de:	
 		\[(n-1)(n-3)\ldots(n-2\cdot\frac{n-5}{2}-1)(n-2\cdot\frac{n-3}{2}-1)=\]
 		\[=(n-1)(n-3)\ldots(n-(n-5)-1)(n-(n-3)-1)=\]
 		\[=(n-1)(n-3)\ldots4\cdot2=(n-1)!!\]
 		
-		Si $n$ es par, $\sigma(m)\neq\sigma(-1-m)\ \forall m\in \mathbb{Z} / (n)$, ya que no hay elemento central. Sea ahora $\gamma=2k$ un número par. Como $2k\leq n$ y las permutaciones son suprayectivas, para algún $m$ se cumple que $\sigma(m)=k$. Se tiene entonces $k+\sigma(-1-m)=2k\implies\sigma(-1-m)=k=\sigma(m)$. Como esto es una contradicción, $\gamma$ debe ser impar.
+		Si $n$ es par, $\sigma(m)\neq\sigma(-1-m)\ \forall m\in \mathbb{Z} / (n)$, ya que no hay elemento central. Sea ahora $\gamma=2k$ un número par. Como $2k\leq n$ y las permutaciones son suprayectivas, para algún $m$ se cumple que $\sigma(m)=k$. Se tiene entonces $k+\sigma(-1-m)=2k$, lo cual a su vez implica que $\sigma(-1-m)=k=\sigma(m)$. Como esto es una contradicción, $\gamma$ debe ser impar.
 		
 		Fijando, por ejemplo, $\sigma(0)=0$, se tienen $\frac{n}{2}$ posibilidades para $\sigma(-1-m)$, es decir, solamente las posibilidades para las que $\gamma$ es impar. Para $\sigma(1)$ hay $(n-2)$ posibilidades, y ahora su simétrico ya viene determinado por el $\gamma$ escogido. Para $\sigma(2)$ hay $(n-4)$, y así sucesivamente~\cite{reiner}. Por tanto, para $n$ par, el número de series con simetría impar es de: 
 		\[\frac{n}{2}\cdot(n-2)(n-4)\ldots(n-2\cdot\frac{n-4}{2})(n-2\cdot\frac{n-2}{2})=\]
@@ -86,14 +93,16 @@
 		n\mbox{ par}&0&(n-2)!!&\frac{n}{2}\cdot(n-2)!!&\frac{1}{2}(n+2)(n-2)!!\\
 		\end{array}\]
 		\def\arraystretch{1}
-		
+
+
+			
 		Una vez se tiene $\#\sigma_2$, solo falta calcular $\#\sigma_1$. Como las permutaciones contadas $\#\sigma$ son todas las de ${S}_n$ exceptuando las transportaciones, $\#\sigma=\frac{\#\mbox{S}_n}{n}=\frac{n!}{n}=(n-1)!$. Por otro lado, $\#\sigma_1 +\#\sigma_2=\#\sigma$. Entonces $\#\sigma_1=(n-1)!-\#\sigma_2$.
 		
 		Recuperando la fórmula del apartado \ref{s:itr}:
 		
-		\[\#\mbox{Espectros}=
+		$$\#\mbox{Espectros}=
 		\frac{1}{4}\left(\#\sigma_1+2\cdot(\#\sigma_2)\right)=
-		\frac{(n-1)!+\#\sigma_2}{4}\]
+		\frac{(n-1)!+\#\sigma_2}{4}$$
 		
 		Para $n$ impar:
 		\[\frac{(n-1)!+(n-1)!!}{4}=\frac{(n-1)!!\cdot\left((n-2)!!+1\right)}{4}\]
@@ -116,13 +125,13 @@
 		\begin{figure}[h]
 			\begin{center}
 %			\ddiagram[no numbers, no arrow]{4,5,7,1,6,3,8,2,11,0,9,10}
-			\includegraphics{Serialismo-matematicas-diagrama-3}
+			\includegraphics{Serialismo-matematicas-diagrama-3.png}
 			\end{center}
 		\end{figure}
-		Ahora calcularemos los espectros formados mediante todas las transformaciones del grupo generado por $\{S,\ T,\ V,\ C\}$; es decir, por ${D}_{n}\times {D}_{n}$. Volviendo a la representación mediante diagramas de reloj, el problema es equivalente a averiguar cuántos diagramas distintos, sin números ni flechas, se pueden dibujar. La flecha indica lo transformado por $V$ y $C$, mientras que los números indican lo transformado por $S$ y $T$. Un diagrama sin estos dos elementos representa entonces todo un espectro serial. Â¿Cuántos diagramas esencialmente distintos hay? De nuevo, por el lema de Burnside:
+		Ahora calcularemos los espectros formados mediante todas las transformaciones del grupo generado por $\{S,\ T,\ V,\ C\}$; es decir, por ${D}_{n}\times {D}_{n}$. Volviendo a la representación mediante diagramas de reloj, el problema es equivalente a averiguar cuántos diagramas distintos, sin números ni flechas, se pueden dibujar. La flecha indica lo transformado por $V$ y $C$, mientras que los números indican lo transformado por $S$ y $T$. Un diagrama sin estos dos elementos representa entonces todo un espectro serial. ¿Cuántos diagramas esencialmente distintos hay? De nuevo, por el lema de Burnside:
 		\[\#\mbox{Espectros}=\frac{1}{|{D}_{n}\times{D}_{n}|}\sum_{\sigma\in{S}_n}|{Stab}(\sigma)|=\frac{1}{2n\cdot2n}\sum_{\sigma\in{S}_n}|{Stab}(\sigma)|\]
 		
-		En vez de expresar el sumatorio como ``para cada $\sigma$, el número de $\Psi$ que fijan $\sigma$'', se puede expresar como ``para cada $\Psi$, el número de $\sigma$ fijados por $\Psi$''. La fórmula queda de esta manera:
+		En vez de expresar el sumatorio como ``para cada $\sigma$, el número de $\Psi$ que fijan $\sigma$'', se puede expresar como ``para cada $\Psi$, el número de $\sigma$ fijados por $\Psi$'' (que llamaremos ${Fij}(\Psi)$). La fórmula queda de esta manera:
 		
 		\[\#\mbox{Espectros}=\frac{1}{4n^2}\sum_{\Psi\in{D}_{n}\times{D}_{n}}{Fij}(\Psi)\] 
 		
@@ -164,7 +173,7 @@
 %			}
 %			\draw (90:1) -- (-45:1);
 %			\end{tikzpicture}
-			\includegraphics{Serialismo-matematicas-diagrama-4}
+			\includegraphics{Serialismo-matematicas-diagrama-4.png}
 			\end{center}
 %		\end{figure}
 		
@@ -195,7 +204,7 @@
 %				\draw[rotate=-180] (90:1) -- (-45:1) -- (-90:1);
 %				\end{tikzpicture}
 %			\end{multicols}
-		\includegraphics{Serialismo-matematicas-diagrama-5}
+		\includegraphics{Serialismo-matematicas-diagrama-5.png}
 		\end{center}
 
 		Efectivamente, el diagrama se cierra antes de pasar por todos los vértices. En cambio, si escogemos 0$^{(1)}$:
@@ -253,7 +262,7 @@
 %			\end{tikzpicture}
 %		\end{multicols}
 \begin{center}
-	\includegraphics{Serialismo-matematicas-diagrama-6}
+	\includegraphics{Serialismo-matematicas-diagrama-6.png}
 \end{center}
 	
 		Y con 0$^{(3)}$:
@@ -311,7 +320,7 @@
 %			\end{tikzpicture}
 %		\end{multicols}
 \begin{center}
-		\includegraphics{Serialismo-matematicas-diagrama-7}
+		\includegraphics{Serialismo-matematicas-diagrama-7.png}
 \end{center}
 		
 		Sea $d=3$ y $n=6$. Escogiendo el primer número como 0$^{(0)}$, el segundo como 1$^{(0)}$ y el tercero como 2$^{(1)}$, no queda más remedio que escoger como comienzo del segundo ciclo el 0$^{(1)}$.
@@ -350,7 +359,7 @@
 %		\end{tikzpicture}
 %	\end{multicols}
 \begin{center}
-	\includegraphics{Serialismo-matematicas-diagrama-8}
+	\includegraphics{Serialismo-matematicas-diagrama-8.png}
 \end{center}
 
 		Pero también podría aparecer este mismo comienzo con la parte final dada la vuelta, simétrica, de esta manera: 0$^{(0)}$, 1$^{(0)}$, 2$^{(1)}$, 2$^{(0)}$, 1$^{(1)}$, 0$^{(1)}$. Esta construcción no está incluida en lo descrito anteriormente, y sin embargo es invariante con respecto a T, V y C a la vez. 
@@ -391,7 +400,7 @@
 %			\end{tikzpicture}
 %		\end{multicols}
 \begin{center}
-		\includegraphics{Serialismo-matematicas-diagrama-9}
+		\includegraphics{Serialismo-matematicas-diagrama-9.png}
 \end{center}
 		
 		Y es que con $n$ par, al rotar $\uptheta_{{n}/{2}}$ el diagrama, éste puede llegar con la orientación cambiada. Esto puede ocurrir cuando haya una diagonal; es decir, cuando entre dos notas haya un intervalo de $\frac{n}{2}$.
@@ -410,7 +419,7 @@
 %		
 %		\draw[style=ddihedralArrow] (12.3,-2.5) -- (12.3,-3.25) -- node [fill=white] {C} (0,-3.25) -- (0,-2.5);
 %		\end{tikzpicture}
-		\includegraphics{Serialismo-matematicas-diagrama-10}
+		\includegraphics{Serialismo-matematicas-diagrama-10.png}
 		\end{center}
 		
 		Se escoge el primer punto de entre $\frac{n}{2}$ posibilidades. No son $n$ ya que saldría la misma figura si se escoge el punto antipodal.
@@ -448,7 +457,7 @@
 		
 	\subsection{Medefonismo, monofonismo y difonismo}
 	\label{s:trivcase}
-		Con $n=0$ se da el caso de medefonismo. El grupo simétrico de orden 0 tiene $0!=1$ elemento. Por tanto, hay una sola posible serie, $\sigma$, que es la que no tiene ninguna nota. El medefonismo es comúnmente llamado silencio.
+		Con $n=0$ se da el caso de medefonismo. El grupo simétrico de orden 0 tiene $0!=1$ elemento. Por tanto, hay una sola posible serie, $\sigma$, que es la que no tiene ninguna nota. El medefonismo es comúnmente llamado silencio; se representará con una tabla vacía.
 		
 %		\[\sigma=\drow{}
 %		\qquad\qquad\qquad
@@ -461,7 +470,7 @@
 %		&
 %		\end{array}\]
 \begin{center}
-			\includegraphics{Serialismo-matematicas-diagrama-11}
+			\includegraphics{Serialismo-matematicas-diagrama-11.png}
 \end{center}
 	
 		Con $n=1$ se da el caso de monofonismo. Con solamente una posible nota, el grupo simétrico de orden 1 tiene $1!=1$ elemento. Por tanto, hay una sola posible serie, $\sigma_0$, que es igual a su inversa, a su retrogradación y a su retrogradación inversa:
@@ -478,7 +487,7 @@
 %			&{RI}_{0}&
 %		\end{array}\]
 \begin{center}
-					\includegraphics{Serialismo-matematicas-diagrama-12}
+					\includegraphics{Serialismo-matematicas-diagrama-12.png}
 \end{center}
 	
 		Con $n=2$ se da el caso de difonismo. Tiene dos posibles notas, así que su grupo simétrico, el de orden 2, tiene $2!=2$ elementos. Por tanto, hay dos series distintas, $\sigma_0$ y $\sigma_1$. Se puede observar que ambas pertenecen al mismo espectro serial, dado que $\sigma_1={T}^1(\sigma_0)$. Además, al igual que en el monofonismo, ambas coinciden con sus inversas, incumpliendo la regla general para $n>2$ probada en el apartado \ref{s:itr}.
@@ -498,5 +507,5 @@
 %		\qquad\qquad
 %		\sigma_1=\drow{1,0}\]
 \begin{center}
-					\includegraphics{Serialismo-matematicas-diagrama-13}
+					\includegraphics{Serialismo-matematicas-diagrama-13.png}
 \end{center}
