--- a/Entrega III/Serialismo-matematicas-III.tex
+++ b/Entrega III/Serialismo-matematicas-III.tex
@@ -68,11 +68,11 @@
 \section{Introducción}
 	
  
-	Este artículo es el tercero y último de la colección ``Serialismo y matemáticas''. Las músicas serialistas son aquellas que permiten construir castillos con un solo grano de arena: una serie particular, una permutación de notas, dinámicas o timbres. La serie se coloca en la obra secuencialmente, siempre igual o con alguna modificación que la adorne. Y es que para esta música,  la serie es el ladrillo y las matemáticas son la pintura con la que decorarlos, ya que las transformaciones que se le puede aplicar a una serie forman preciosas estructuras matemáticas enmarcadas en la Teoría de Grupos.
+	Este artículo es el tercero y último de la colección {\it Serialismo y matemáticas}. Las músicas serialistas son aquellas que permiten construir castillos con un solo grano de arena: una serie particular, una permutación de notas, dinámicas o timbres. La serie se coloca en la obra secuencialmente, siempre igual o con alguna modificación que la adorne. Y es que para esta música,  la serie es el ladrillo y las matemáticas son la pintura con la que decorarlos, ya que las transformaciones que se le puede aplicar a una serie forman preciosas estructuras matemáticas enmarcadas en la Teoría de Grupos.
 	
 	En el primer artículo~\cite{celia1} nos centramos en el dodecafonismo, en sus orígenes y en comentar una de sus obras. En el segundo artículo~\cite{celia2} ampliamos las definiciones dodecafónicas para encontrar el grupo diédrico, y descubrimos la historia de los discípulos de Schoenberg y del serialismo integral.
 	
-	En esta tercera entrega proporcionaremos herramientas matemáticas relacionadas con \textbf{acciones}, \textbf{órbitas} y \textbf{estabilizadores} de Teoría de Grupos (\hyperref[ch:acciones]{sección 2}), para después contar de dos maneras distintas el \textbf{número de espectros seriales}, que son el número de órbitas de las transformaciones sobre las series, que un compositor puede utilizar en sus obras (\hyperref[ch:espectros]{sección 3}); en concreto, con las transformaciones $\{I,\ T,\ R\}$ (\hyperref[s:itr]{3.1}) y $\{S,\ T,\ V,\ C\}$ (\hyperref[s:stvc]{3.2}). Y de esta manera habremos hecho un recorrido a fondo por el serialismo y habremos explorado sus posibilidades musicales y matemáticas.
+	Esta tercera entrega está destinada al lector más ducho en las matemáticas; se notará en el lenguaje y en la exposición de las ideas. En ella proporcionaremos herramientas matemáticas relacionadas con \textbf{acciones}, \textbf{órbitas} y \textbf{estabilizadores} de Teoría de Grupos (\hyperref[ch:acciones]{sección 2}), para después contar de dos maneras distintas el \textbf{número de espectros seriales}, que son el número de órbitas de las transformaciones sobre las series, que un compositor puede utilizar en sus obras (\hyperref[ch:espectros]{sección 3}); en concreto, con las transformaciones $\{I,\ T,\ R\}$ (\hyperref[s:itr]{3.1}) y $\{S,\ T,\ V,\ C\}$ (\hyperref[s:stvc]{3.2}). Y de esta manera habremos hecho un recorrido a fondo por el serialismo y habremos explorado sus posibilidades musicales y matemáticas.
 	
 	\input{06.Acciones}%
 	\input{07.Espectros}%
